<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pngwing_com_fghfgh"
    android:orientation="vertical"
    android:theme="@style/Theme.InnPets.NoActionBar"
    tools:context=".Registro">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="387dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/textoRegistro1"
        android:textAlignment="center"
        android:textSize="35dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="20dp"
        android:text="@string/textoRegistro2" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="20dp"
        android:text="@string/textoRegistro3" />

    <EditText
        android:id="@+id/etApellido"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="20dp"
        android:text="@string/textoRegistro4" />

    <EditText
        android:id="@+id/etRUT"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="20dp"
        android:text="@string/textoRegistro5" />

    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button4"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="50dp"
        android:onClick="registro2"
        android:text="@string/btnSiguiente" />

</LinearLayout>