<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pngwing_com_fghfgh"
    android:orientation="vertical"
    tools:context=".Registro2">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="387dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/textoRegistro1"
        android:textAlignment="center"
        android:textSize="35dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="20dp"
        android:text="@string/TextoRegistro2.1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etFechaNacimiento"
            android:layout_width="231dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="109dp"
            android:layout_height="58dp"
            android:backgroundTint="#FFFFFF"
            android:onClick="abrirCalendario"
            app:srcCompat="@drawable/pngegg__1_"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="20dp"
        android:text="@string/textoRegistro2.2" />

    <RadioGroup
        android:id="@+id/rgGenero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="50px"
        android:orientation="horizontal"
        android:weightSum="1">

        <RadioButton
            android:id="@+id/rbMasculino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/rbMasculino" />

        <RadioButton
            android:id="@+id/rbFemenino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/rbFemenino" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="20dp"
        android:text="@string/textoRegistro2.3" />

    <Spinner
        android:id="@+id/spRegiones"
        android:layout_width="307dp"
        android:layout_height="40dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="10dp"
        android:entries="@array/region" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="20dp"
        android:text="@string/textoRegistro2.4" />

    <Spinner
        android:id="@+id/spComunas"
        android:layout_width="307dp"
        android:layout_height="40dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="10dp"
        android:entries="@array/comuna" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="20dp"
        android:text="@string/textoRegistro2.5" />

    <Spinner
        android:id="@+id/spCiudad"
        android:layout_width="313dp"
        android:layout_height="40dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="10dp"
        android:entries="@array/ciudad" />

    <Button
        android:id="@+id/button5"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="50dp"
        android:onClick="registro3"
        android:text="@string/btnSiguiente" />

</LinearLayout>